[package]
name = "Raust"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
aes-gcm = "0.10.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
rand = "0.8"
rpassword = "7.3"
eframe = "0.33.3"
